--- a/renderer/add.html
+++ b/renderer/add.html
@@ -13,6 +13,7 @@
       <h1>添加音乐到曲库</h1> 
       <div id="musicList" class="mb-2">您还未选择任何音乐文件</div>
       <button type="button" id="select-music" class="btn btn-outline-primary btn-lg btn-block mt-4">选择音乐</button>
+      <button type="button" id="add-music" class="btn btn-primary btn-lg btn-block mt-4">导入音乐</button>
     </div>
     <script src="./add.js"></script>
   </body>
